rust/crates/rax/src/text/rules/snapshots/rax__text__rules__until_char__tests__ascii_keep_right.snap
---
source: crates/rax/src/text/rules/until_char.rs
expression: result
---
Ok(
    (
        "abc",
        "-def",
    ),
)
