rust/crates/rax/src/text/rules/snapshots/rax__text__rules__until_char__tests__utf8_keep_left.snap
---
source: crates/rax/src/text/rules/until_char.rs
expression: result
---
Ok(
    (
        "你好",
        "世界",
    ),
)
