rust/crates/rax/src/text/rules/snapshots/rax__text__rules__until_char__tests__utf8_no_delimiter.snap
---
source: crates/rax/src/text/rules/until_char.rs
expression: result
---
Err(
    RuleError {
        reason: "input is empty or does not contain the expected character.",
    },
)
